--- a/Dept.html
+++ b/Dept.html
@@ -34,7 +34,7 @@
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./articles.html">Articles</a>
+                    <a class="nav-link" href="Firebase-magazine/articles.html">Articles</a>
                 </li>
             </ul>
 
