--- a/articles.html
+++ b/articles.html
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="./Dept.html">Departments </a>
+                    <a class="nav-link" href="Firebase-magazine/Dept.html">Departments </a>
 
                 </li>
                 <li class="nav-item active">
