--- a/articles.html
+++ b/articles.html
@@ -50,7 +50,7 @@
         <div class="mt-5 pt-5">
             <div class="form-group">
                 <label for="ArticleID">Article ID</label>
-                <input type="text" name="ArticleID" id="ArticleID" class="form-control" placeholder="Department ID" readonly>
+                <input type="text" name="ArticleID" id="ArticleID" class="form-control" placeholder="Article ID" readonly>
                 <br>
                 <label for="art-name">Article Name</label>
                 <input type="text" class="form-control" name="art-name" id="art-name" placeholder="Article Name">
